# edit_core

./: Cargo.toml  LICENSE  README.md
src/: buffer.rs  editor.rs  lib.rs  text.rs  types.rs
tests/: editor_tests.rs
