[package]
name = "edit_core"
version = "0.2.0"
edition = "2024"
description = "Dependency-free text editing core for terminal and GUI editors."
readme = "README.md"
documentation = "https://docs.rs/edit_core"
repository = "https://github.com/Riadabd/edit_core"
homepage = "https://github.com/Riadabd/edit_core"
license = "MIT"

[dependencies]
